# NDKSharedDeleteTest

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/quarkboom/ndkshareddeletetest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/quarkboom/ndkshareddeletetest/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/quarkboom/ndkshareddeletetest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
